--- a/7wonder/css/main.css
+++ b/7wonder/css/main.css
@@ -35,6 +35,18 @@ body {
   margin: 4px 2px;
   cursor: pointer;
 }
+.right {
+  margin-top:1%;
+  margin-left:95%;
+  position: absolute;
+  z-index: 1;
+}
+.left {
+  margin-top:1%;
+  margin-left:2%;
+  position: absolute;
+  z-index: 1;
+}
 
 .buttonFt1 {background-color: #4CAF50;} /* Green */
 .buttonFt2 {background-color: #008CBA;} /* Blue */
