--- a/7wonder/main.css
+++ b/7wonder/main.css
@@ -1,109 +1,158 @@
-* {
-    margin: 0;
-    padding: 0;
-  }
-html,body {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-    background: url(./src/images/bg1.jpg) center center / cover no-repeat;
-    background-attachment: relative;
-	  background-position: center top;
-    background-repeat: no-repeat;
+.modal-backdrop {
+  z-index: -1;
+}
+.disabled 
+{
+   display:none;
+}
+.enabled 
+{
+   display:block;
+}
+body{
+  overflow: hidden;
+}
+img {
+  border: 1px solid #ddd;
+  padding: 5px;
+  width: 390px;
 }
 
-.tx {
-    font-size: 90px;
-    color:aliceblue;
-    text-shadow: -3px 5px 5px rgb(0, 0, 0);
-    height: 80%;
-    width: 100%;
-    display: flex;
-    position: fixed;
-    align-items: center;
-    justify-content: center;
-}
-.tx1 {
-    font-size: 50px;
-    color: aliceblue;
-    /*text-shadow: 2px 2px 5px rgb(255, 0, 140);*/
-    height: 100%;
-    width: 100%;
-    display: flex;
-    position: fixed;
-    align-items: center;
-    justify-content: center;
-}
-
-section::after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  content: '';
+#chartdiv {
   width: 100%;
-  height: 80%;
-
+  height: 100vh;
+  max-width: auto;
+  background-color: #474747;
+  z-index: -1;
 }
 
 
-.demo a {
-  position: absolute;
-  bottom: 20px;
-  left: 47.5%;
-  z-index: 2;
-  display: inline-block;
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  color: rgb(214, 214, 214);
-  text-shadow: 2px 2px 5px rgb(0, 0, 0);
-  font : normal 400 20px/1 'Josefin Sans', sans-serif;
-  letter-spacing: .1em;
-  text-decoration: none;
-  transition: opacity .3s;
-}
-.demo a:hover {
-  opacity: .5;
-}
-
-#section05 a {
-  padding-top: 70px;
-}
-#section05 a span {
-  position: absolute;
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
   top: 0;
-  left: 45%;
-  width: 35px;
-  height: 35px;
-  margin-left: -12px;
-  border-left: 1px solid rgb(214, 214, 214);
-  border-bottom: 1px solid rgb(214, 214, 214);
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-animation: sdb05 1.5s infinite;
-  animation: sdb05 1.5s infinite;
-  box-sizing: border-box;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
-@-webkit-keyframes sdb05 {
-  0% {
-    -webkit-transform: rotate(-45deg) translate(0, 0);
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: rotate(-45deg) translate(-20px, 20px);
-    opacity: 0;
-  }
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
 }
-@keyframes sdb05 {
-  0% {
-    transform: rotate(-45deg) translate(0, 0);
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #2c2c2c;
+  color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+
+
+.seek{
+    position: fixed;
     opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    transform: rotate(-45deg) translate(-20px, 20px);
-    opacity: 0;
-  }
+}
+nav {
+  position: fixed;
+  z-index: 5;
+  left: 90vw;
+  top:3vh;
+  font-family: 'Lora';font-size: 22px;
+  color:white;
+}
+nav ul{
+  text-align:center;
+  z-index: 5;
+  font-size: 20pt;
+
+}
+nav ul li{
+  display: block;  
+  
+}
+
+li a{
+  background:rgba(34, 34, 34, 0.959);
+  width:100px;
+  height:100px;
+  line-height:95px;
+  display:block;
+}
+
+li a:hover{
+  transition-duration: 300ms;
+  background: rgb(24, 24, 24);
+}
+.dropdown {
+  float: right;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #000000;
+  box-shadow: 0px 8px 16px 0px rgb(255, 255, 255);
+  z-index: 5;
+}
+
+.dropdown-content a {
+  float: none;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  font-size: 15pt;
+}
+
+.dropdown-content a:hover {
+  background-color: rgba(24, 24, 24, 0.6);
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
